:bug: Fix amount in RecentTransactions not to overflow

--- a/src/components/dashboard/recentTransactions/recentTransactions.css
+++ b/src/components/dashboard/recentTransactions/recentTransactions.css
@@ -37,10 +37,10 @@
       @mixin contentLargest bold;
 
       width: 100%;
-      height: 75px;
+      padding: 16px 0;
       box-sizing: border-box;
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
       border-bottom: 1px solid var(--color-mystic);
       cursor: pointer;
@@ -49,6 +49,11 @@
 
       & > span:last-child {
         margin-left: auto;
+      }
+
+      & .avatarAndAddress {
+        display: flex;
+        flex-direction: row;
       }
     }
   }
